--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "ip": "127.0.0.1",
   "announced_ip": "127.0.0.1",
-  "signaling_server_port": 8000
+  "signaling_server_port": 8000,
+  "webrtc_min_port": 10000,
+  "webrtc_max_port": 10000
 }
